[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Square.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/title.png" type="Texture" id=4]
[ext_resource path="res://assets/Schoolwork-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 291
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 68
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Fonts/fonts/normal = SubResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="Squares" type="Node2D" parent="."]

[node name="S11" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 322, 113 )

[node name="S12" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 518, 101 )

[node name="S13" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 704, 119 )

[node name="S21" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 328, 297 )

[node name="S22" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 512, 301 )

[node name="S23" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 716, 303 )

[node name="S31" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 317, 478 )

[node name="S32" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 495, 479 )

[node name="S33" parent="Squares" instance=ExtResource( 3 )]
position = Vector2( 723, 497 )

[node name="Winner" type="Label" parent="."]
visible = false
margin_top = 192.0
margin_right = 1024.0
margin_bottom = 418.0
theme = SubResource( 2 )
text = "WINNER: O"
align = 1

[node name="GameOverMenu" type="PanelContainer" parent="Winner"]
margin_left = 220.0
margin_top = 231.0
margin_right = 828.0
margin_bottom = 369.0
theme = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Winner/GameOverMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 601.0
margin_bottom = 131.0

[node name="Rematch" type="Button" parent="Winner/GameOverMenu/VBoxContainer"]
margin_right = 594.0
margin_bottom = 60.0
text = "REMATCH"

[node name="Back to menu" type="Button" parent="Winner/GameOverMenu/VBoxContainer"]
margin_top = 64.0
margin_right = 594.0
margin_bottom = 124.0
text = "BACK TO MENU"

[node name="Menu" type="Node2D" parent="."]

[node name="SelectMode" type="PanelContainer" parent="Menu"]
margin_left = 72.0
margin_top = 307.0
margin_right = 951.0
margin_bottom = 509.0
theme = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/SelectMode"]
margin_left = 7.0
margin_top = 7.0
margin_right = 872.0
margin_bottom = 195.0

[node name="PlayVsPlayer" type="Button" parent="Menu/SelectMode/VBoxContainer"]
margin_right = 865.0
margin_bottom = 60.0
text = "PLAY VS HUMAN"

[node name="PlayVsAI_RandomSquare" type="Button" parent="Menu/SelectMode/VBoxContainer"]
margin_top = 64.0
margin_right = 865.0
margin_bottom = 124.0
text = "PLAY VS DUMB AI"

[node name="PlayVsAI_WinningSquare" type="Button" parent="Menu/SelectMode/VBoxContainer"]
margin_top = 128.0
margin_right = 865.0
margin_bottom = 188.0
text = "PLAY VS SMART AI"

[node name="Title" type="Sprite" parent="Menu"]
position = Vector2( 497, 357 )
texture = ExtResource( 4 )

[connection signal="pressed" from="Winner/GameOverMenu/VBoxContainer/Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="Winner/GameOverMenu/VBoxContainer/Back to menu" to="." method="_on_Back_to_menu_pressed"]
[connection signal="pressed" from="Menu/SelectMode/VBoxContainer/PlayVsPlayer" to="." method="_on_PlayVsPlayer_pressed"]
[connection signal="pressed" from="Menu/SelectMode/VBoxContainer/PlayVsAI_RandomSquare" to="." method="_on_PlayVsAI_RandomSquare_pressed"]
[connection signal="pressed" from="Menu/SelectMode/VBoxContainer/PlayVsAI_WinningSquare" to="." method="_on_PlayVsAI_WinningSquare_pressed"]
